--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<appSettings>
+		<add key="filePath" value="C:\data\TournamentTracker"/>
+	</appSettings>
 	<connectionStrings>
-		
 		<add name="Tournaments" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TournamentTrackerDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
